--- a/pages/agenda.html
+++ b/pages/agenda.html
@@ -49,6 +49,6 @@
       <button onclick="closeModal()">Cancelar</button>
     </div>
   </div>  
-  
-</body>
+  <script type="module" src="./js/main.js"></script>
+  </body>
 </html>
