--- a/pages/agenda.html
+++ b/pages/agenda.html
@@ -5,10 +5,111 @@
   <title>Agenda - Gestão de Projetos</title>
   <link href="https://cdn.jsdelivr.net/npm/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <style>
-    /* estilos mantidos conforme fornecido */
-    /* ... (mantido o CSS original) ... */
-  </style>
+  <style>   
+      font-size: 18px;
+      cursor: pointer;
+    }
+
+    .calendar {
+      display: grid;
+      grid-template-columns: repeat(7, 1fr);
+      gap: 10px;
+      max-width: 800px;
+      margin: auto;
+    }
+
+    .day, .empty {
+      background-color: var(--bg-card);
+      padding: 15px;
+      border-radius: 10px;
+      text-align: center;
+      min-height: 80px;
+      position: relative;
+      transition: 0.3s;
+    }
+
+    .day.highlight {
+      background-color: var(--highlight) !important;
+      color: #000;
+      cursor: pointer;
+    }
+
+    .day.orange {
+      background-color: orange !important;
+      color: #000;
+    }
+
+    .event {
+      font-size: 0.7em;
+      margin-top: 5px;
+    }
+
+    .days-of-week {
+      font-weight: bold;
+      text-align: center;
+    }
+
+    #addEventBtn {
+      position: fixed;
+      bottom: 30px;
+      right: 30px;
+      background-color: #ff70a6;
+      color: white;
+      border: none;
+      border-radius: 50%;
+      width: 60px;
+      height: 60px;
+      font-size: 2rem;
+      cursor: pointer;
+      z-index: 5;
+    }
+
+    .modal {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: var(--bg-card);
+      color: var(--text-main);
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.3);
+      display: none;
+      z-index: 10;
+      max-width: 90%;
+      width: 400px;
+    }
+
+    .modal input {
+      width: 100%;
+      padding: 10px;
+      margin: 10px 0;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      background: var(--bg-main);
+      color: var(--text-main);
+    }
+
+    .modal-buttons {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 10px;
+    }
+
+    .modal-buttons button {
+      flex: 1;
+      margin: 5px;
+      padding: 10px;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+
+    .modal-buttons button:nth-child(1) { background-color: #28a745; color: white; }
+    .modal-buttons button:nth-child(2) { background-color: #dc3545; color: white; }
+    .modal-buttons button:nth-child(3) { background-color: #6c757d; color: white; }
+
+</style>
 </head>
 <body>
   <!-- Sidebar -->
