--- a/pages/agenda.html
+++ b/pages/agenda.html
@@ -5,10 +5,59 @@
   <title>Agenda - Gestão de Projetos</title>
   <link href="https://cdn.jsdelivr.net/npm/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <style>   
-      font-size: 18px;
-      cursor: pointer;
+  <style>
+    :root {
+      --bg-main: #f5f7fa;
+      --bg-card: #ffffff;
+      --text-main: #111;
+      --text-muted: #555;
+      --sidebar-bg: #1e1e2f;
+      --sidebar-text: #ccc;
+      --sidebar-active: #2e2e42;
+      --highlight: #ff70a6;
     }
+
+    .dark-mode {
+      --bg-main: #1a1b1e;
+      --bg-card: #2c2f36;
+      --text-main: #f1f1f1;
+      --text-muted: #ccc;
+      --sidebar-bg: #121212;
+      --sidebar-text: #aaa;
+      --sidebar-active: #2e2e42;
+      --highlight: #ffd700;
+    }
+
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Segoe UI', sans-serif;
+    }
+
+    body {
+      display: flex;
+      height: 100vh;
+      background-color: var(--bg-main);
+      color: var(--text-main);
+      transition: background 0.3s, color 0.3s;
+    }
+
+    .sidebar {
+      width: 240px;
+      background-color: var(--sidebar-bg);
+      color: var(--sidebar-text);
+      padding: 20px 0;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+
+    .sidebar h2 {
+      text-align: center;
+      margin-bottom: 30px;
+    }
+
 
     .calendar {
       display: grid;
