--- a/pages/agenda.html
+++ b/pages/agenda.html
@@ -58,6 +58,60 @@
       margin-bottom: 30px;
     }
 
+    .menu-item {
+      display: flex;
+      align-items: center;
+      padding: 12px 20px;
+      color: var(--sidebar-text);
+      text-decoration: none;
+      transition: 0.3s;
+    }
+
+    .menu-item:hover, .menu-item.active {
+      background-color: var(--sidebar-active);
+      color: #fff;
+    }
+
+    .menu-item i {
+      margin-right: 10px;
+    }
+
+    .main {
+      flex: 1;
+      padding: 30px;
+      background-color: var(--bg-main);
+    }
+
+    .main-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 20px;
+    }
+
+    .theme-toggle {
+      background: none;
+      border: none;
+      font-size: 1.5rem;
+      cursor: pointer;
+      color: var(--text-main);
+    }
+
+    .calendar-nav {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 10px;
+      margin-bottom: 10px;
+    }
+
+    .calendar-nav button {
+      background: none;
+      border: none;
+      color: var(--text-main);
+      font-size: 18px;
+      cursor: pointer;
+    }
 
     .calendar {
       display: grid;
