--- a/pages/agenda.html
+++ b/pages/agenda.html
@@ -219,7 +219,7 @@
   <aside class="sidebar">
     <div>
       <h2>Gestão</h2>
-      <a href="index.html" class="menu-item"><i class='bx bx-grid-alt'></i> Dashboard</a>
+      <a href="../index.html" class="menu-item"><i class='bx bx-grid-alt'></i> Dashboard</a>
       <a href="projeto.html" class="menu-item"><i class='bx bx-folder'></i> Projetos</a>
       <a href="agenda.html" class="menu-item active"><i class='bx bx-calendar'></i> Agenda</a>
       <a href="chat.html" class="menu-item"><i class='bx bx-group'></i> Mensagens</a>
