--- a/pages/agenda.html
+++ b/pages/agenda.html
@@ -253,6 +253,6 @@
       <button onclick="closeModal()">Cancelar</button>
     </div>
   </div>  
-  <script type="module" src="./js/main.js"></script>
+  <script type="module" src="../JS/main.js"></script>
   </body>
 </html>
